[package]
name = "first-tokio"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = "0.11.4"
futures = "0.3.0"
tempdir = "0.3.7"
error-chain = "0.12.4"
tempfile = "3"

[dependencies.async-std]
version = "1.6"
features = ["attributes"]