[package]
name = "vdbmgr"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.4", features = ["json"]}
serde_json = "1.0"
futures = "0.3.0"
tempdir = "0.3.7"
error-chain = "0.12.4"
tempfile = "3"
serde = { version = "1.0", features = ["derive"]}
scraper = "0.12.0"
flate2 = "1.0.20"
libflate = "1.1.0"
strum = "0.21"
strum_macros = "0.21"

[dependencies.async-std]
version = "1.6"
features = ["attributes"]

[profile.release]
opt-level = 'z' # Optimize for size
lto = true